# ledger-app

./: .gitignore  LICENSE  README.md  guidelines.md  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
src/: App.css  App.test.tsx  App.tsx  main.tsx  setupTests.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.sqlx/: query-43819d788989fed48c36d49a236467f598638f3d2e3819e5cb5f2630f8597b89.json  query-b329f97f3b30dc25050efa6e2340445ae91200f36bcd2a2aa9bf9c65aebf8daa.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs
src-tauri/src/migrations/: 1_create_accounts_table.sql
src/components/: AccountForm.tsx  AccountList.tsx  AccountManagement.tsx
src/context/: ThemeContext.tsx
src/services/: DatabaseService.ts
